# mentor

./: .env.example  .gitignore  Dockerfile  README.md  pyproject.toml  test_data.json  tox.ini
config/: mypy.ini  pytest.ini  ruff.toml
deploy/: .env.example  compose.yml  entrypoint.sh
mentor/: manage.py
mentor/assistant/: agent.py  apps.py  models.py  serializers.py  settings.py  tasks.py  urls.py  views.py
mentor/assistant/migrations/: 0001_initial.py  0002_add_created_at_default.py  0002_rename_session_id_chatmessage_session.py  0003_add_created_at_default.py
mentor/assistant/prompts/: generate_title_human.txt  generate_title_system.txt  text_analysis_human.txt  text_analysis_system.txt
mentor/assistant/serializers/: chat.py  manage.py  task.py
mentor/assistant/tests/: test_agent.py  test_chat_serializers.py  test_manage_serializers.py  test_models.py  test_task_serializers.py  test_tasks.py  test_views.py
mentor/core/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
mentor/mentor/: celery.py  settings.py  urls.py
