[project]
name = "mentor"
version = "0.1.0"
description = "AI-based educational assistant."
authors = [
    {name = "Carol Rizzi",email = "carol.rizziray@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13,<4"
dependencies = [
    "django (>=5.2.4,<6.0.0)",
    "djangorestframework (>=3.16.0,<4.0.0)",
    "djangorestframework-simplejwt (>=5.5.0,<6.0.0)",
    "celery (>=5.5.3,<6.0.0)",
    "redis (>=6.2.0,<7.0.0)",
    "pydantic (>=2.11.7,<3.0.0)",
    "pydantic-settings (>=2.10.1,<3.0.0)",
    "langchain-together (>=0.3.0,<0.4.0)",
    "langchain (>=0.3.26,<0.4.0)",
    "langchain-postgres (>=0.0.15,<0.0.16)",
    "langchain-community (>=0.3.27,<0.4.0)",
    "drf-spectacular (>=0.28.0,<0.29.0)",
    "psycopg-pool (>=3.2.6,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"
ruff = "^0.12.2"
mypy = "^1.16.1"
pytest-cov = "^6.2.1"
tox = "^4.27.0"
pytest-asyncio = "^1.0.0"

[tool.poetry.group.notebook]
optional = true

[tool.poetry.group.notebook.dependencies]
jupyterlab = "^4.4.4"

